# eql-ja

./: .gitignore  README.md  dbstr_mod.txt  eqstr_mod.txt  pyproject.toml
src/eql_ja/: dbstr.py  eqstr.py
